--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
 
   <body>
+    <main id="main__page">
+      <div id="main__page--wrapper">
+        <section id="main__page--wrapper--section">
+          <h1 id="main__page--title">UFO Battle</h1>
+        </section>
+        <button id="main__page--play--button" type="button" class="btn btn-warning">Jugar</button>
+      </div>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
