--- a/html/signup.html
+++ b/html/signup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UFO Battle - Login</title>
+    <title>UFO Battle - Register</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,14 +11,14 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/fonts.css" />
-    <link rel="stylesheet" href="../css/login.css" />
+    <link rel="stylesheet" href="../css/register.css" />
   </head>
   <body>
-    <main id="login__page">
-      <div id="login__page--wrapper">
-        <section id="login__page--wrapper--section">
-          <h1 id="login__page--title">Login</h1>
-          <form id="login__page--form">
+    <main id="register__page">
+      <div id="register__page--wrapper">
+        <section id="register__page--wrapper--section">
+          <h1 id="register__page--title">Sign up</h1>
+          <form id="register__page--form">
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
               <input
@@ -33,15 +33,20 @@
               <label for="exampleInputPassword1" class="form-label">Password</label>
               <input type="password" class="form-control" id="exampleInputPassword1" value="12345" />
             </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            <div class="mb-3">
+              <label for="exampleInputPassword2" class="form-label">Confirm Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword2" value="12345" />
             </div>
-            <a href="../index.html" id="login__page--button" type="submit" class="btn btn-warning w-100" value="Login"
-              >Login</a
+            <a
+              href="./login.html"
+              id="register__page--button"
+              type="submit"
+              class="btn btn-warning w-100"
+              value="register"
+              >Sign up</a
             >
-            <a href="../html/signup.html" id="login__page--register" type="submit" class="btn w-100 text-white"
-              >Don't have account? Register</a
+            <a href="./login.html" id="register__page--register" type="submit" class="btn w-100 text-white"
+              >Already have account? Login</a
             >
           </form>
         </section>
