--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <a class="nav-link text-white" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Preferences</a>
+              <a class="nav-link text-white" href="./html/preferences.html">Preferences</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="#">Records</a>
