--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/fonts.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/nav.css" />
   </head>
 
   <body>
@@ -21,7 +20,7 @@
         <div id="nav__wrapper--menu">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-white" aria-current="page" href="#">Home</a>
+              <a class="nav-link text-white active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="./html/preferences.html">Preferences</a>
@@ -40,12 +39,12 @@
         </div>
       </div>
     </nav>
-    <main id="main__page">
+    <main class="main">
       <div id="main__page--wrapper">
-        <section id="main__page--wrapper--section">
+        <section id="main__page--section">
           <h1 id="main__page--title">UFO Battle</h1>
         </section>
-        <button id="main__page--play--button" type="button" class="btn btn-warning">Play</button>
+        <a id="main__page--play--button" href="./html/play.html" class="btn btn-warning">Play</a>
       </div>
     </main>
     <script
