Implement dynamic menu authentication

--- a/index.html
+++ b/index.html
@@ -20,22 +20,18 @@
         <div id="nav__wrapper--menu">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-white active" aria-current="page" href="#">Home</a>
+              <a class="nav-link text-white active" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="./html/preferences.html">Preferences</a>
+              <a class="nav-link text-white" href="/html/preferences.html">Preferences</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Records</a>
+              <a class="nav-link text-white" href="/html/records.html">Records</a>
             </li>
           </ul>
         </div>
         <div id="nav__wrapper--authentication">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link text-white" aria-current="page" href="./html/login.html">Logout</a>
-            </li>
-          </ul>
+          <ul id="navbar__nav-authentication" class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
         </div>
       </div>
     </nav>
@@ -52,5 +48,6 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="/js/controllers/navController.js"></script>
   </body>
 </html>
