Play game interface and some fixes

--- a/html/preferences.html
+++ b/html/preferences.html
@@ -69,5 +69,6 @@
       crossorigin="anonymous"
     ></script>
     <script type="module" src="/js/controllers/preferenceController.js"></script>
+    <script type="module" src="/js/controllers/navController.js"></script>
   </body>
 </html>
