--- a/html/records.html
+++ b/html/records.html
@@ -63,5 +63,6 @@
       crossorigin="anonymous"
     ></script>
     <script type="module" src="/js/controllers/recordController.js"></script>
+    <script type="module" src="/js/controllers/navController.js"></script>
   </body>
 </html>
