--- a/html/play.html
+++ b/html/play.html
@@ -22,8 +22,8 @@
           <div id="play__ufos"></div>
 
           <div id="play__records">
-            <p id="time">Time: <span id="time__data"></span> sec</p>
-            <p id="points">Score: <span id="points__data"></span></p>
+            <p>Time: <span id="time"></span> sec</p>
+            <p>Score: <span id="score"></span></p>
           </div>
         </section>
       </div>
