--- a/html/play.html
+++ b/html/play.html
@@ -1,39 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UFO Battle - Preferences</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/play.css" />
-  </head>
-  <body>
-    <main class="main">
-      <div class="wrapper">
-        <section id="play__section" class="main__section">
-          <img id="missile" src="../assets/missile.png" />
 
-          <div id="play__ufos"></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>UFO Battle - Preferences</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" href="../css/play.css" />
+</head>
 
-          <div id="play__records">
-            <p>Time: <span id="time"></span> sec</p>
-            <p>Score: <span id="score"></span></p>
-          </div>
-        </section>
+<body>
+  <nav id="nav" class="navbar fixed-top navbar-expand bg-transparent">
+    <div id="nav__wrapper" class="container">
+      <div id="nav__wrapper--menu">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link text-white" aria-current="page" href="/index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/html/preferences.html">Preferences</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/html/records.html">Records</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white active" href="/html/play.html">Play</a>
+          </li>
+        </ul>
       </div>
-    </main>
+      <div id="nav__wrapper--authentication">
+        <ul id="navbar__nav-authentication" class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
+      </div>
+    </div>
+  </nav>
+  <main class="main">
+    <div class="wrapper">
+      <section id="play__section" class="main__section">
+        <img id="missile" src="../assets/missile.png" />
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    <script type="module" src="/js/controllers/playController.js"></script>
-  </body>
+        <div id="play__ufos"></div>
+
+        <div id="play__records">
+          <p>Time: <span id="time"></span> sec</p>
+          <p>Score: <span id="score"></span></p>
+        </div>
+      </section>
+    </div>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script type="module" src="/js/controllers/navController.js"></script>
+  <script type="module" src="/js/controllers/playController.js"></script>
+</body>
+
 </html>
