--- a/html/preferences.html
+++ b/html/preferences.html
@@ -1,74 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UFO Battle - Preferences</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/preferences.css" />
-  </head>
-  <body>
-    <nav id="nav" class="navbar fixed-top navbar-expand bg-transparent">
-      <div id="nav__wrapper" class="container">
-        <div id="nav__wrapper--menu">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link text-white" aria-current="page" href="/index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white active" href="/html/preferences.html">Preferences</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="/html/records.html">Records</a>
-            </li>
-          </ul>
-        </div>
-        <div id="nav__wrapper--authentication">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link text-white" aria-current="page" href="./html/preferences.html">Logout</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <main class="main">
-      <div class="wrapper">
-        <section class="main__section">
-          <h1 id="preferences__title" class="main__section--title">preferences</h1>
-          <form id="preference__page--form" class="main__section--form">
-            <div class="preferences__form--data d-flex flex-row justify-content-between mb-3">
-              <label for="totalufo" class="form-label">Number of UFO's</label>
-              <input type="number" class="preferences__data" id="totalufo" name="totalufo" min="1" max="5" />
-            </div>
-            <div class="preferences__form--data d-flex flex-row justify-content-between mb-3">
-              <label for="time" class="form-label">Time (seconds)</label>
-              <select type="number" class="preferences__data" id="time" name="time">
-                <option value="60">60</option>
-                <option value="120">120</option>
-                <option value="180">180</option>
-              </select>
-            </div>
-            <button href="../index.html" id="preferences__page--button" type="submit" class="btn btn-warning w-100">
-              Save preferences
-            </button>
-          </form>
-        </section>
-      </div>
-    </main>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    <script type="module" src="/js/controllers/preferenceController.js"></script>
-    <script type="module" src="/js/controllers/navController.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>UFO Battle - Preferences</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" href="../css/preferences.css" />
+</head>
+
+<body>
+  <nav id="nav" class="navbar fixed-top navbar-expand bg-transparent">
+    <div id="nav__wrapper" class="container">
+      <div id="nav__wrapper--menu">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link text-white" aria-current="page" href="/index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white active" href="/html/preferences.html">Preferences</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/html/records.html">Records</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/html/play.html">Play</a>
+          </li>
+        </ul>
+      </div>
+      <div id="nav__wrapper--authentication">
+        <ul id="navbar__nav-authentication" class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
+      </div>
+    </div>
+  </nav>
+  <main class="main">
+    <div class="wrapper">
+      <section class="main__section">
+        <h1 id="preferences__title" class="main__section--title">preferences</h1>
+        <form id="preference__page--form" class="main__section--form">
+          <div class="preferences__form--data d-flex flex-row justify-content-between mb-3">
+            <label for="totalufo" class="form-label">Number of UFO's</label>
+            <input type="number" class="preferences__data" id="totalufo" name="totalufo" min="1" max="5" />
+          </div>
+          <div class="preferences__form--data d-flex flex-row justify-content-between mb-3">
+            <label for="time" class="form-label">Time (seconds)</label>
+            <select type="number" class="preferences__data" id="time" name="time">
+              <option value="60">60</option>
+              <option value="120">120</option>
+              <option value="180">180</option>
+            </select>
+          </div>
+          <button href="../index.html" id="preferences__page--button" type="submit" class="btn btn-warning w-100">
+            Save preferences
+          </button>
+        </form>
+      </section>
+    </div>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script type="module" src="/js/controllers/preferenceController.js"></script>
+  <script type="module" src="/js/controllers/navController.js"></script>
+</body>
+
 </html>
